# MorePhi — Test Suite (more_phi:: API, Catch2 v3)
# Only compiles real, existing test sources.

cmake_minimum_required(VERSION 3.24)
enable_testing()

# ── Catch2 v3 ──────────────────────────────────────────────────────────────────
if(NOT TARGET Catch2::Catch2WithMain)
    include(FetchContent)
    FetchContent_Declare(
        Catch2
        GIT_REPOSITORY https://github.com/catchorg/Catch2.git
        GIT_TAG        v3.4.0
        GIT_SHALLOW    TRUE
    )
    FetchContent_MakeAvailable(Catch2)
endif()

# ── Unit test executable ────────────────────────────────────────────────────────
# Legacy Morphy-era tests under tests/src are intentionally excluded.

add_executable(MorePhiTests
    Unit/test_more_phi_unit.cpp
    Unit/TestPhysicsAndGenetic.cpp
    Unit/TestSidechainTrigger.cpp
    Unit/TestAudioEngine.cpp
    Unit/TestDSPQuality.cpp
    Unit/TestAIRegressions.cpp
    Unit/TestLLMSettings.cpp
    Unit/TestLLMSettingsStore.cpp
    Unit/TestLLMConnectionValidator.cpp
    Unit/TestLLMChatClient.cpp
    Unit/TestLLMSettingsDialog.cpp
    Unit/TestOfflineBatchRenderer.cpp
    Unit/AudioBufferPoolTests.cpp
    Unit/SIMDAudioTests.cpp
    Unit/PerformanceProfilerTests.cpp
    Integration/TestPluginLifecycle.cpp
    Integration/TestMCPIntegration.cpp
    Integration/TestDatasetIntegration.cpp
    Integration/TestUserManualFeatureSurface.cpp
    Integration/TestVST3ParameterAutomation.cpp
    Integration/TestVST3MidiAndSidechain.cpp
    Integration/TestVST3AudioSignalAccuracy.cpp
    # Integration/TestVST3ComprehensiveE2E.cpp  # Out of sync with v3.3 core/API; needs rewrite
    # V2 subsystem tests
    Unit/TestModulationEngine.cpp
    Unit/TestSpectralEngine.cpp
    Unit/TestGranularEngine.cpp
    Unit/TestPresetLibrary.cpp
    Unit/TestV2Integration.cpp
    # Unit/TestDatasetModules.cpp  # Existing suite is out of sync with current dataset APIs

    # ── Pre-Deployment Audit Protocol (2026-04-14) ──────────────────────────────
    # Module 2: Host Integration (P0)
    Unit/TestHostIntegration.cpp
    # Module 3: MIDI Routing (P1)
    Unit/TestMIDIRouting.cpp
    # Module 4: Concurrency & Real-Time Safety (P0)
    Unit/TestConcurrency.cpp
    # Module 5: State Persistence (P0)
    Unit/TestStatePersistence.cpp
    # Module 10: Stress & Edge Cases (P1)
    Unit/TestStressEdgeCases.cpp
    # Module 11: End-to-End Signal Path (P0)
    Unit/TestE2ESignalPath.cpp
    # Module 7: AI / MCP Server (P2)
    Unit/TestMCPServerUnit.cpp
    Unit/TestAutomationControlPlane.cpp
    # Ozone 11 mastering integration
    Unit/TestOzoneIntegration.cpp
    # Neural mastering safety projection
    Unit/TestNeuralMasteringSafetyPolicy.cpp
    Unit/TestNeuralMasteringDatasetSchema.cpp
    Unit/TestNeuralMasteringController.cpp
    # Realtime mastering analysis
    Unit/TestMeterWindowAccumulator.cpp
    Unit/TestSpectrumAnalyzer.cpp
    Unit/TestStereoFieldAnalyzer.cpp
    Unit/TestLicensing.cpp
)

# Link the compiled plugin objects in (shared) so the test binary has access
# to ParameterState, LockFreeQueue, InterpolationEngine, SnapshotBank
target_link_libraries(MorePhiTests PRIVATE
    Catch2::Catch2WithMain
    MorePhi                 # JUCE shared-code target generated by juce_add_plugin
    juce::juce_core           # propagates JUCE include paths to test translation units
    juce::juce_audio_processors
    juce::juce_dsp            # required by OversamplingWrapper and LatencyManager tests
    nlohmann_json::nlohmann_json
)

target_include_directories(MorePhiTests PRIVATE
    ${CMAKE_SOURCE_DIR}/src
    ${CMAKE_CURRENT_SOURCE_DIR}   # allows #include "../Mocks/MockV2Interfaces.h" from Unit/
)

target_compile_definitions(MorePhiTests PRIVATE
    MORE_PHI_TEST_MODE=1
    JUCE_UNIT_TESTS=1
    JUCE_STANDALONE_APPLICATION=0
    JUCE_MODAL_LOOPS_PERMITTED=1
)
if(COMMAND more_phi_apply_build_tuning)
    more_phi_apply_build_tuning(MorePhiTests)
endif()

# ── Stack size (MSVC: 4 MB, matches plugin build for V2 engine overhead) ─────
if(MSVC)
    target_link_options(MorePhiTests PRIVATE /STACK:4194304)
endif()

# ── Sanitizers (opt-in via parent MORE_PHI_ENABLE_SANITIZERS) ─────────────────
if(MORE_PHI_ENABLE_SANITIZERS AND (CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU"))
    target_compile_options(MorePhiTests PRIVATE
        -fsanitize=address,undefined
        -fno-omit-frame-pointer
    )
    target_link_options(MorePhiTests PRIVATE
        -fsanitize=address,undefined
    )
endif()

# ── CTest registration ─────────────────────────────────────────────────────────
include(Catch)
catch_discover_tests(MorePhiTests
    TEST_SPEC "*"
)

# ── Standalone stdio MCP server tests ────────────────────────────────────────
add_executable(MorePhiMcpServerTests
    Unit/TestStandaloneMcpServer.cpp
    Unit/TestIZotopeIPCAssistant.cpp
)

target_link_libraries(MorePhiMcpServerTests PRIVATE
    Catch2::Catch2WithMain
    MorePhiMcpCore
    juce::juce_core
    juce::juce_audio_formats
    juce::juce_audio_processors
    nlohmann_json::nlohmann_json
)

target_include_directories(MorePhiMcpServerTests PRIVATE
    ${CMAKE_SOURCE_DIR}/src
    ${CMAKE_CURRENT_SOURCE_DIR}
)

target_compile_definitions(MorePhiMcpServerTests PRIVATE
    MORE_PHI_TEST_MODE=1
    JUCE_UNIT_TESTS=1
    JUCE_STANDALONE_APPLICATION=1
)

if(COMMAND more_phi_apply_build_tuning)
    more_phi_apply_build_tuning(MorePhiMcpServerTests)
endif()

catch_discover_tests(MorePhiMcpServerTests
    TEST_SPEC "*"
)

# ── Benchmark executable (opt-in) ──────────────────────────────────────────────
option(MORE_PHI_BUILD_BENCHMARKS "Build performance benchmark suite" OFF)
if(MORE_PHI_BUILD_BENCHMARKS)
    add_executable(MorePhiBenchmarks
        Performance/BenchmarkSuite.cpp
    )

    target_link_libraries(MorePhiBenchmarks PRIVATE
        MorePhi
        juce::juce_core
        juce::juce_audio_processors
    )

    if(WIN32)
        target_link_libraries(MorePhiBenchmarks PRIVATE Psapi)
    endif()

    target_include_directories(MorePhiBenchmarks PRIVATE
        ${CMAKE_SOURCE_DIR}/src
    )

    target_compile_definitions(MorePhiBenchmarks PRIVATE
        MORE_PHI_TEST_MODE=1
        JUCE_STANDALONE_APPLICATION=0
    )
    if(COMMAND more_phi_apply_build_tuning)
        more_phi_apply_build_tuning(MorePhiBenchmarks)
    endif()
endif()

# VST3 validation (optional, needs external validator tooling)
if(TARGET MorePhi_VST3)
    set(MORE_PHI_VST3_VALIDATION_PLUGIN
        "$<TARGET_GENEX_EVAL:MorePhi_VST3,$<TARGET_PROPERTY:MorePhi_VST3,JUCE_PLUGIN_ARTEFACT_FILE>>")

    find_program(VST3_VALIDATOR_EXE vst3_validator)
    find_package(Python3 COMPONENTS Interpreter QUIET)
    if(VST3_VALIDATOR_EXE AND Python3_Interpreter_FOUND)
        add_test(NAME VST3Validation
            COMMAND ${Python3_EXECUTABLE}
                ${CMAKE_SOURCE_DIR}/tests/scripts/run_vst3_validator.py
                --validator ${VST3_VALIDATOR_EXE}
                --plugin ${MORE_PHI_VST3_VALIDATION_PLUGIN}
                --output ${CMAKE_BINARY_DIR}/vst3_validator_results.json
                --junit ${CMAKE_BINARY_DIR}/vst3_validator_junit.xml
                --strict
        )
        set_tests_properties(VST3Validation PROPERTIES TIMEOUT 300 LABELS validation)
    endif()

    find_program(PLUGINVAL_EXE pluginval)
    if(PLUGINVAL_EXE)
        add_test(NAME PluginvalValidation
            COMMAND ${PLUGINVAL_EXE}
                --strictness-level 5
                --validate ${MORE_PHI_VST3_VALIDATION_PLUGIN}
        )
        set_tests_properties(PluginvalValidation PROPERTIES TIMEOUT 300 LABELS validation)
    endif()
endif()

if(APPLE)
    find_program(AUVAL_EXE auval)
    if(AUVAL_EXE)
        add_test(NAME AUValidation
            COMMAND ${AUVAL_EXE} -v aufx Mrph Mrph
        )
        set_tests_properties(AUValidation PROPERTIES TIMEOUT 120 LABELS validation)
    endif()
endif()
